Book Appointment replace

--- a/404.html
+++ b/404.html
@@ -137,7 +137,7 @@
 													<li><a href="404.html">404 Error</a></li>
 												</ul>
 											</li>
-											<li><a href="#">Vlogs <i class="icofont-rounded-down"></i></a>
+											<li><a href="#">Blogs <i class="icofont-rounded-down"></i></a>
 												<ul class="dropdown">
 													<li><a href="blog-single.html">Blog Details</a></li>
 												</ul>
@@ -150,7 +150,7 @@
 							</div>
 							<div class="col-lg-2 col-12">
 								<div class="get-quote">
-									<a href="appointment.html" class="btn">Book Appointment</a>
+									<a href="appointment.html" class="btn">Book</a>
 								</div>
 							</div>
 						</div>
